--- a/CSS/01-main.css
+++ b/CSS/01-main.css
@@ -1,3 +1,20 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
+@import url("https://fonts.googleapis.com/css?family=Work+Sans");
+@import url("https://fonts.googleapis.com/css?family=Space+Mono");
+
+@import url("02-style.css");
+@import url("03-modifiers.css");
+@import url("carousel.css");
+@import url("footer.css");
+@import url("nav-icon.css");
+@import url("nav-logo.css");
+@import url("nav-form.css");
+@import url("nav-modal.css");
+
+:root {
+  font-size: 16px;
+}
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -15,12 +32,10 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Space Mono', sans-serif;
+  font-family: 'Space Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
-  color: white;
-  cursor: crosshair;
 }
 
 /* Text styles */
@@ -29,10 +44,78 @@ p {
 }
 
 h1 {
+  font-family: 'Space Mono', monospace;
   font-size: 2em;
   font-weight: 400;
 }
+
+h4 {
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 600;
+}
+
 h5 {
+  font-family: 'Work Sans', sans-serif;
   color: black;
   font-weight: 400;
+}
+
+/* Lists */
+ul {
+  color: #adadad;
+  margin-left: 3em;
+  font-size: 1em;
+  padding-left: 0;
+  list-style: none;
+}
+@media only screen and (min-width: 768px) {
+  ul {
+    line-height: 1.9em;
+  }
+}
+@media only screen and (max-width: 768px) {
+  ul {
+    line-height: 1.75em;
+  }
+}
+@media only screen and (max-width: 576px) {
+  ul {
+      margin-left: 0.5em;
+    }
+}
+
+ul:not(:first-child) {
+  margin-top: 2em;
+}
+
+li:first-child{
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 500;
+  color: white;
+}
+
+
+a,
+a:link,
+a:visited,
+a:hover,
+a:focus,
+a:active {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+::selection {
+  background: #adadad;
+  color: #1e1e1e;
+}
+
+::-moz-selection {
+  background: #adadad;
+  color: #1e1e1e;
+}
+
+textarea:focus, input:focus{
+  outline: none;
 }
