--- a/CSS/02-style.css
+++ b/CSS/02-style.css
@@ -1,6 +1,111 @@
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+/* main colors */
+.--clr-black {color: #1e1e1e;}
+.--clr-darkgrey {color: #333333;}
+.--clr-lightgrey {color: #adadad;}
+.--clr-white {color: white;}
+.--bg-black {background-color: #1e1e1e;}
+.--bg-darkgrey {background-color: #333333;}
+.--bg-lightgrey {background-color: #adadad;}
+.--bg-white {background-color: white;}
+
+.--bg-grey5 {background-color: #303237;}
+.--bg-grey4 {background-color: #373940;}
+.--bg-grey2 {background-color: #45474c;}
+
+.--bg-grey2 {background-color: #7d7e82;}
+.--bg-grey1 {background-color: #ced4da;}
+.--bg-grey3 {background-color: #f27a60;}
+
+
+
+/* complimentary colors */
+.clr-java {color: #8cbbc2;}
+.clr-csharp {color: #c285c0;}
+.clr-css {color: #3985cf;}
+.clr-html {color: #df8559;}
+.clr-nodejs {color: #47cbae;}
+.clr-mongodb {color: #638c43;}
+
 .container{
   width: 100%;
   position: absolute;
   text-align: center;
   top: 43%;
 }
+
+
+/* Button */
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1em;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out
+}
+
+.btn:hover, .btn:focus {
+  text-decoration: none;
+}
+
+.btn-outline {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  
+  background-color: white;
+  border: 1px solid #333333;
+  padding: 0.5em 2em 0.5em 2em;
+  border-radius: 0;
+}
+
+.btn-outline:hover {
+  background-color: #333333;
+  color: white;
+}
+
+
+/* Displays */
+.display-hidden {
+  display: none;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.height-100 {
+  height: 100%;
+}
+
+/* Backgrounds */
+.bg-fixed {
+  background-attachment: fixed;
+}
+
+.bg-filled {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  overflow: hidden;
+  }
