--- a/CSS/01-main.css
+++ b/CSS/01-main.css
@@ -36,6 +36,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 /* Text styles */
